--- a/WiseSingleLife/src/main/webapp/css/main.css
+++ b/WiseSingleLife/src/main/webapp/css/main.css
@@ -23,3 +23,5 @@
 }
 .slider_txt1{color:#ffffff; text-align: center; padding-top: 200px;}
 .slider_txt2{color:#ffffff; text-align: center; padding-top: 10px;}
+
+.event{display: block; width: 250px;}
