--- a/WiseSingleLife/src/main/webapp/css/detail.css
+++ b/WiseSingleLife/src/main/webapp/css/detail.css
@@ -38,13 +38,17 @@
 
 
 .block-23-detail ul {
-  padding: 0; }
+  padding: 0;
+  list-style-type: none; 
+  }
   .block-23-detail ul li, .block-23-detail ul li > a {
     display: table;
     line-height: 1.5;
     margin-bottom: 15px;
     font-family: 'Roboto', sans-serif;
-    font-size:14px;
+    font-size:18px;
+    list-style-type: none; 
+    
      }
   .block-23-detail ul li span {
     color: rgba(255, 255, 255, 0.7); }
