가격비교,레시피리스트 UI 깨지는 곳 수정

--- a/WiseSingleLife/src/main/webapp/css/style.css
+++ b/WiseSingleLife/src/main/webapp/css/style.css
@@ -9402,3 +9402,6 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+    
+.recipe_list{min-height: calc(100vh - 391px);}
