--- a/WiseSingleLife/src/main/webapp/css/detail.css
+++ b/WiseSingleLife/src/main/webapp/css/detail.css
@@ -1,6 +1,8 @@
 #section-counter-detail {
   position: relative;
-  z-index: 0; }
+  z-index: 0;
+  background-color: #ffd437
+   }
   #section-counter-detail:after {
     position: absolute;
     top: 0;
@@ -11,10 +13,18 @@
     z-index: -1;
     opacity: .9;
     background: #ffd437; }
-#section-counter-detail
+#section-counter-detail{
+	background-color: #ffd437
+}
+
+#section-counter-detail.ftco-section.ftco-counter-detail{
+	background-color: #ffd437
+}
 
 .ftco-counter-detail {
-  padding: 7em 0; }
+  padding: 7em 0;
+  background-color: #ffd437
+  }
   .ftco-counter-detail .text strong.number {
     font-weight: 400;
     font-size: 30px;
