--- a/WiseSingleLife/src/main/webapp/css/chat.css
+++ b/WiseSingleLife/src/main/webapp/css/chat.css
@@ -1,7 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
 div#chat_container{
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   right: 10px;
   width: 270px;
   height: 310px;
@@ -11,12 +10,12 @@ div#chat_container{
 }
 div#chat{
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   right: 10px;
   width: 250px;
   height: 300px;
   background-color: #efefef;
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.25);
   transition:transform 300ms;
 }
 
@@ -24,11 +23,10 @@ div#chat{
   div#chat header{
     width: 100%;
     height: auto;
-    background-color: #FDCE6E;
+    background-color: #fad000;
     cursor: pointer;
   }
     div#chat header h1{
-      font-family: 'Roboto Slab', sans-serif;
       color: white;
       font-size: 16px;
       text-align: left;
@@ -38,7 +36,7 @@ div#chat{
 }
   div#chat section.content{
     overflow:scroll;
-    background-color: #ffe1e1;
+    background-color: #FFF8E1;
     position:absolute;
     top:29px;
     left: 0;
@@ -51,7 +49,7 @@ div#chat{
     left: 0;
     width: 100%;
     height: 40px;
-    background-color: white;
+    background-color: #FFFFFF;
 }
     div#chat form input{
       display: block;
@@ -61,25 +59,7 @@ div#chat{
       line-height: 30px;
       margin: 5px auto;
       border-botom: 1px solid #303030;
-      background-color: white;
+      background-color: #FFFFFF;
       font-size: 16px;
 }
     div#chat form a{}
-
-/* Experience digital logo */
-#Provided_by{
-  position:fixed;
-  bottom: 20px;
-  left:70px;
-  color: #424242;
-  text-decoration: none;
-  font-family: sans-serif;
-  margin-top: -20px;
-  font-weight: 200;
-}
-#Provided_by img{
-  position: absolute;
-  bottom: -8px;
-  width: 40px;
-  left: -50px;
-}
